[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hgdriver"
version = "0.1.0"
description = "Windows-only ChromeDriver manager that auto-matches Chrome and driver versions."
authors = [{ name = "HGDriver" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "selenium>=4.0.0",
    "requests>=2.28.0",
    "psutil>=5.9.0",
]

[project.urls]
Homepage = "https://example.com"

[tool.setuptools]
packages = ["hgdriver"]
